@@ -1,17 +1,17 @@
 package com.marianbastiurea.lifeofbees.controller;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.marianbastiurea.lifeofbees.action.ActionType;
-import com.marianbastiurea.lifeofbees.action.ActionsOfTheWeek;
-import com.marianbastiurea.lifeofbees.game.LifeOfBeesFactory;
-import com.marianbastiurea.lifeofbees.game.LifeOfBeesRepository;
-import com.marianbastiurea.lifeofbees.game.LifeOfBeesService;
 import com.marianbastiurea.lifeofbees.bees.Apiary;
 import com.marianbastiurea.lifeofbees.bees.HarvestHoney;
 import com.marianbastiurea.lifeofbees.bees.Hive;
-import com.marianbastiurea.lifeofbees.history.*;
-import com.marianbastiurea.lifeofbees.weather.WeatherData;
 import com.marianbastiurea.lifeofbees.game.LifeOfBees;
+import com.marianbastiurea.lifeofbees.game.LifeOfBeesFactory;
+import com.marianbastiurea.lifeofbees.game.LifeOfBeesRepository;
+import com.marianbastiurea.lifeofbees.game.LifeOfBeesService;
+import com.marianbastiurea.lifeofbees.history.ApiaryHistory;
+import com.marianbastiurea.lifeofbees.history.GameHistory;
+import com.marianbastiurea.lifeofbees.history.GameHistoryService;
+import com.marianbastiurea.lifeofbees.history.HiveHistory;
 import com.marianbastiurea.lifeofbees.security.JwtTokenProvider;
 import com.marianbastiurea.lifeofbees.users.User;
 import com.marianbastiurea.lifeofbees.users.UserService;
@@ -19,19 +19,18 @@ import com.marianbastiurea.lifeofbees.view.GameRequest;
 import com.marianbastiurea.lifeofbees.view.GameResponse;
 import com.marianbastiurea.lifeofbees.view.HivesView;
 import com.marianbastiurea.lifeofbees.view.HomePageGameResponse;
+import com.marianbastiurea.lifeofbees.weather.WeatherData;
+import com.marianbastiurea.lifeofbees.weather.WeatherService;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
-import com.marianbastiurea.lifeofbees.weather.WeatherService;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.security.Principal;
 import java.time.LocalDate;
 import java.util.*;
 import java.util.stream.Collectors;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.server.ResponseStatusException;
 
 
 @RestController
@@ -50,15 +49,11 @@ public class LifeOfBeesController {
 
     public LifeOfBeesController(LifeOfBeesRepository lifeOfBeesRepository,
                                 UserService userService, JwtTokenProvider jwtTokenProvider,
-                                 GameHistoryService gameHistoryService) {
+                                GameHistoryService gameHistoryService) {
         this.lifeOfBeesRepository = lifeOfBeesRepository;
         this.userService = userService;
         this.jwtTokenProvider = jwtTokenProvider;
-        this.gameHistoryService=gameHistoryService;
-    }
-
-    private Optional<LifeOfBees> getByGameId(String gameId) {
-        return lifeOfBeesRepository.findByGameId(gameId);
+        this.gameHistoryService = gameHistoryService;
     }
 
     private static void accessDenied(LifeOfBees lifeOfBeesGame, String userId) {
@@ -67,16 +62,20 @@ public class LifeOfBeesController {
         }
     }
 
+    private Optional<LifeOfBees> getByGameId(String gameId) {
+        return lifeOfBeesRepository.findByGameId(gameId);
+    }
+
     @PostMapping("/game")
-    public ResponseEntity<Map<String, String>> createGame(@RequestBody GameRequest gameRequest, @RequestHeader("Authorization") String authorizationHeader, Authentication authentication) {
+    public ResponseEntity<Map<String, String>> createGame(@RequestBody GameRequest gameRequest, @RequestHeader("Authorization") String authorizationHeader) {
         System.out.println("Received request to create game: " + gameRequest);
         String jwtToken = authorizationHeader.replace("Bearer ", "");
         LocalDate startDate = LocalDate.parse(gameRequest.getStartDate());
-        WeatherData weatherData =weatherService.getWeatherData(startDate);
+        WeatherData weatherData = weatherService.getWeatherData(startDate);
         String userIdFromToken;
         try {
             userIdFromToken = jwtTokenProvider.extractUserId(jwtToken);
-            System.out.println("acesta e userId din Token" + userIdFromToken);
+            System.out.println("userId din Token" + userIdFromToken);
         } catch (Exception e) {
             System.out.println("An error occurred while extracting username: " + e.getMessage());
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
@@ -86,7 +85,7 @@ public class LifeOfBeesController {
             return ResponseEntity.status(HttpStatus.FORBIDDEN)
                     .body(Map.of("error", "Token does not match userId in createGame"));
         }
-        User user =userService.getUser(gameRequest);
+        User user = userService.getUser(gameRequest);
 
         LifeOfBees lifeOfBeesGame = LifeOfBeesFactory.createLifeOfBeesGame(
                 gameRequest.getGameName(),
@@ -110,13 +109,13 @@ public class LifeOfBeesController {
 
     @GetMapping("/game/{gameId}")
     public GameResponse getGame(@PathVariable String gameId, Principal principal) {
-        System.out.println("Cerere pentru gameId: " + gameId);
+        System.out.println("request for gameId: " + gameId);
         LifeOfBees lifeOfBeesGame = getByGameId(gameId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Game not found"));
         String userId = principal.getName();
         accessDenied(lifeOfBeesGame, userId);
         GameResponse response = getGameResponse(lifeOfBeesGame);
-        System.out.println("Date trimise către React: " + response);
+        System.out.println("Data send to React: " + response);
         return response;
     }
 
@@ -126,11 +125,9 @@ public class LifeOfBeesController {
             @PathVariable String gameId,
             @RequestBody Map<String, Object> requestData,
             Principal principal) {
-        System.out.println("Cerere pentru iterație gameId: " + gameId);
+        System.out.println("Request for iterate gameId: " + gameId);
         LifeOfBees lifeOfBeesGame = getByGameId(gameId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Game not found"));
-
-        System.out.println("Acesta e jocul primit în Iterate: " + lifeOfBeesGame);
         List<WeatherData> weatherDataNextWeek = weatherService.getWeatherForNextWeek(lifeOfBeesGame.getCurrentDate());
         if (weatherDataNextWeek.isEmpty()) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Weather data for the next week not found");
@@ -138,8 +135,7 @@ public class LifeOfBeesController {
         String userId = principal.getName();
         accessDenied(lifeOfBeesGame, userId);
         Object data = requestData.get("actions");
-        System.out.println("Acesta e obiectul primit in controller: " + data);
-        lifeOfBeesGame = lifeOfBeesGame.iterateOneWeek(lifeOfBeesGame, lifeOfBeesService, data,weatherDataNextWeek);
+        lifeOfBeesGame = lifeOfBeesGame.iterateOneWeek(lifeOfBeesGame, data, weatherDataNextWeek);
         lifeOfBeesRepository.save(lifeOfBeesGame);
         GameResponse response = getGameResponse(lifeOfBeesGame);
         gameHistoryService.addGameInGameHistory(lifeOfBeesGame);
@@ -150,7 +146,7 @@ public class LifeOfBeesController {
         GameResponse gameResponse = new GameResponse();
         gameResponse.setId(game.getGameId());
         for (Hive hive : game.getApiary().getHives()) {
-            gameResponse.getHives().add(new HivesView(hive.getId(), hive.getAgeOfQueen(), hive.getEggFrames().getNumberOfEggFrames(), hive.getHoneyFrames().getHoneyFrame().size(), hive.isItWasSplit(), hive.isItWasHarvested()));
+            gameResponse.getHives().add(new HivesView(hive.getId(), hive.getAgeOfQueen(), hive.getEggFrames().getNumberOfEggFrames(), hive.getHoneyFrames().getHoneyFrame().size(), hive.isItWasSplit()));
         }
         gameResponse.setTemperature(game.getWeatherData().getTemperature());
         gameResponse.setActionsOfTheWeek(game.getActionsOfTheWeek());
@@ -159,14 +155,14 @@ public class LifeOfBeesController {
         gameResponse.setPrecipitation(game.getWeatherData().getPrecipitation());
         gameResponse.setCurrentDate(game.getCurrentDate());
         gameResponse.setTotalKgOfHoneyHarvested(game.getTotalKgOfHoneyHarvested());
-        System.out.println("acestea sunt datele trimise catre React: " + gameResponse);
+        System.out.println("data send to React: " + gameResponse);
         return gameResponse;
     }
 
 
     @GetMapping("/getHoneyQuantities/{gameId}")
     public ResponseEntity<HarvestHoney> getHoneyQuantities(@PathVariable String gameId, Principal principal) {
-        System.out.println("Cerere pentru getHoneyQuantities, gameId: " + gameId);
+        System.out.println("request for getHoneyQuantities, gameId: " + gameId);
         LifeOfBees lifeOfBeesGame = getByGameId(gameId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Game not found"));
         System.out.println("Acesta e jocul primit in getHoney:" + lifeOfBeesGame);
@@ -175,7 +171,6 @@ public class LifeOfBeesController {
         Apiary apiary = lifeOfBeesGame.getApiary();
         apiary.honeyHarvestedByHoneyType();
         HarvestHoney honeyData = apiary.getTotalHarvestedHoney();
-        System.out.println("Cantitățile de miere trimise către client: " + honeyData);
         return ResponseEntity.ok(honeyData);
     }
 
@@ -184,10 +179,10 @@ public class LifeOfBeesController {
             @PathVariable String gameId,
             @RequestBody Map<String, Double> requestData,
             Principal principal) {
-        System.out.println("Cerere pentru vânzare miere, gameId: " + gameId);
+        System.out.println("request for selling honey, gameId: " + gameId);
         LifeOfBees lifeOfBeesGame = getByGameId(gameId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Game not found"));
-        System.out.println("Acesta e jocul primit in sellHoney:" + lifeOfBeesGame);
+
         String userId = principal.getName();
         accessDenied(lifeOfBeesGame, userId);
         double revenue = requestData.getOrDefault("totalValue", 0.0);
@@ -225,7 +220,6 @@ public class LifeOfBeesController {
         lifeOfBeesGame.setTotalKgOfHoneyHarvested(apiary.getTotalKgHoneyHarvested());
         lifeOfBeesGame.setMoneyInTheBank(lifeOfBeesGame.getMoneyInTheBank() + revenue);
         lifeOfBeesRepository.save(lifeOfBeesGame);
-        System.out.println("Stock și venituri actualizate pentru gameId: " + gameId);
         return ResponseEntity.ok("Stock and revenue updated successfully.");
     }
 
@@ -235,10 +229,9 @@ public class LifeOfBeesController {
             @PathVariable String gameId,
             @RequestBody Map<String, Integer> request,
             Principal principal) {
-        System.out.println("Cerere pentru cumpărare stupi, gameId: " + gameId);
+        System.out.println("Request to buy hives, gameId: " + gameId);
         LifeOfBees lifeOfBeesGame = getByGameId(gameId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Game not found"));
-        System.out.println("Acesta e jocul primit in buyHives:" + lifeOfBeesGame);
         String userId = principal.getName();
         accessDenied(lifeOfBeesGame, userId);
         Integer numberOfHives = request.get("numberOfHives");
@@ -253,7 +246,6 @@ public class LifeOfBeesController {
         }
         lifeOfBeesGame.setMoneyInTheBank(lifeOfBeesGame.getMoneyInTheBank() - totalCost);
         lifeOfBeesRepository.save(lifeOfBeesGame);
-        System.out.println("Stupi cumpărați cu succes pentru gameId: " + gameId);
         return ResponseEntity.ok("Hives bought successfully.");
     }
 
@@ -261,9 +253,9 @@ public class LifeOfBeesController {
     public List<HomePageGameResponse> getJohnDoeGames() {
         List<LifeOfBees> userGames = lifeOfBeesService.getGamesForJohnDoe();
         if (userGames.isEmpty()) {
-            System.out.println("Nu s-au găsit jocuri pentru utilizatorul JohnDoe.");
+            System.out.println("No games for JohnDoe.");
         } else {
-            System.out.println("Jocuri găsite pentru utilizatorul JohnDoe: " + userGames);
+            System.out.println("JohnDoe's games: " + userGames);
         }
         return userGames.stream()
                 .map(game -> {
@@ -286,20 +278,18 @@ public class LifeOfBeesController {
     public List<HomePageGameResponse> getGamesForUserByType(
             @RequestParam String userId,
             @RequestParam(required = false) String gameType) {
-        System.out.println("solicitare jocuri pentru userId: " + userId);
         List<LifeOfBees> userGames = lifeOfBeesService.getGamesForUserByType(userId, gameType);
-        System.out.println("jocurile gasite pentru userId: " + userGames);
         if (gameType != null) {
             userGames = userGames.stream()
                     .filter(game -> game.getGameType().equalsIgnoreCase(gameType))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         if (userGames.isEmpty()) {
-            System.out.println("Nu s-au găsit jocuri pentru utilizatorul cu userId: " + userId
-                    + (gameType != null ? " și tipul de joc: " + gameType : "."));
+            System.out.println("No games found for for userId: " + userId
+                    + (gameType != null ? " game type: " + gameType : "."));
         } else {
-            System.out.println("Jocuri găsite pentru utilizatorul cu userId: " + userId
-                    + (gameType != null ? " și tipul de joc: " + gameType : "")
+            System.out.println("Games found for userId: " + userId
+                    + (gameType != null ? " game type: " + gameType : "")
                     + ": " + userGames);
         }
         return userGames.stream()
@@ -316,9 +306,7 @@ public class LifeOfBeesController {
 
     @GetMapping("/HiveHistory/{gameId}")
     public List<HiveHistory> getHiveHistory(@PathVariable String gameId,
-                                            @RequestParam("hiveId") Integer hiveId,
-                                            Principal principal) {
-        System.out.println("Cerere pentru istoricul stupilor in jocul cu gameId: " + gameId);
+                                            @RequestParam("hiveId") Integer hiveId) {
         GameHistory gameHistory = gameHistoryService.findGameBygameId(gameId);
 
         List<HiveHistory> hiveHistories = new ArrayList<>();
@@ -330,9 +318,9 @@ public class LifeOfBeesController {
             hiveHistory.setHive(game.getApiary().getHiveById(hiveId));
             hiveHistories.add(hiveHistory);
         }
-        System.out.println("acesta sunt datele trimise catre HistoryHive:"+hiveHistories);
         return hiveHistories;
     }
+
     @GetMapping("/apiaryHistory/{gameId}")
     public ResponseEntity<List<ApiaryHistory>> getApiaryHistory(@PathVariable String gameId) throws JsonProcessingException {
         GameHistory gameHistory = gameHistoryService.findGameBygameId(gameId);
@@ -347,7 +335,6 @@ public class LifeOfBeesController {
             apiaryHistory.setActionsOfTheWeek(game.getActionsOfTheWeek());
             apiaryHistory.setHive(apiary.getHives());
             apiaryHistories.add(apiaryHistory);
-            System.out.println("Acesta e obiectul ApiaryHistory: " + apiaryHistory);
         }
         return ResponseEntity.ok(apiaryHistories);
     }
